@@ -10,17 +10,16 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
- * Security configuration for development.
+ * Security configuration (development mode).
  *
- * What this does:
- *   - Enables CORS for localhost:3000 (frontend dev) and localhost:8080
- *   - Disables CSRF (not needed for stateless REST APIs)
- *   - Sets session management to STATELESS (REST best practice)
- *   - Permits ALL requests without authentication (dev only — replace in prod)
- *   - Disables X-Frame-Options so the H2 console can render in an iframe
+ * - CORS: allows localhost:3000 and localhost:8080
+ * - CSRF: disabled (stateless REST API, no cookies)
+ * - Session: STATELESS
+ * - Auth: all requests permitted (swap for JWT/OAuth in production)
+ * - Frame options: disabled so the H2 console renders in an iframe
  */
 @Configuration
 @EnableWebSecurity
@@ -31,28 +30,18 @@ public class SecurityConfig {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
-            .sessionManagement(session ->
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(authz ->
-                authz.anyRequest().permitAll())
-            // Allow H2 console to load in an iframe
-            .headers(headers ->
-                headers.frameOptions(frame -> frame.disable()));
-
+            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth.anyRequest().permitAll())
+            .headers(h -> h.frameOptions(f -> f.disable()));  // H2 console iframe support
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "http://localhost:8080"
-        ));
-        config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
-        ));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
